fix spacing

--- a/src/sass/layout/_competences.scss
+++ b/src/sass/layout/_competences.scss
@@ -5,14 +5,7 @@
 
   .skill__main-container {
     position: relative;
-    margin-right: 48px;
-
-    &:last-child {
-      margin-right: 0;
-    }
-    &:nth-child(2) {
-      margin-left: 48px;
-    }
+    margin: 0px 24px;
   }
 
   h4 {
